# chat-backend

./: .env.example  Cargo.toml
migrations/: 20250502065916_create_user_table.sql  20250504141104_create_session_table.sql  20250509130625_create_conversation_table.sql  20250521061836_create_messages_table.sql
src/: db.rs  error.rs  main.rs
src/handlers/: conversation.rs  message.rs  mod.rs  user.rs
src/middlewares/: auth.rs  logger.rs
src/modules/: conversation.rs  message.rs  mod.rs  user.rs
src/routes/: conversation.rs  message.rs  mod.rs  user.rs
src/services/: conversation.rs  message.rs  mod.rs  session.rs  user.rs
src/utils/: mod.rs
